--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <div id="header">
             <div class="container">
                 <nav>
-                    <a href="#"><img src="images/logo.jpg" class="logo"></a>
+                    <a href="#"><img src="logo.jpg" class="logo"></a>
                     <ul id="sidemenu">
                         <i id="crossIcon" class="fa-solid fa-xmark" onclick="closemenu()"></i>
                         <li><a href="#aboutUs">About Us</a></li>
@@ -31,8 +31,8 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="images/accio group pic.PNG">
-                        <img src="images/accio pic 2.jpg">
+                        <img src="accio group pic.PNG">
+                        <img src="accio pic 2.jpg">
                     </div>
                     <div class="about-col-2">
                         <h1 class="subtitle">About Us</h1>
@@ -83,12 +83,12 @@
                 <p style="font-size: 25px; color: #ababab;">Now, let's get personal and get to know each of us.</p>
                 <div class="peopleList">
                     <div>
-                        <img src="images/yitin personal pic.jpg">
+                        <img src="yitin personal pic.jpg">
                         <h2><i class="fa-solid fa-palette"></i><span>Soon Yi Tin</span></h2>
                         <p>UI/UX designer<br>Straight As in SPM<br>Currently studying STPM</p>
                     </div>
                     <div>
-                        <img src="images/yihuan personal pic.jpg">
+                        <img src="yihuan personal pic.jpg">
                         <h2><i class="fa-solid fa-code"></i><span>Teoh Yi Huan</span></h2>
                         <p>Back-end Developer<br>Straight As in SPM<br>Currently studying A-level</p>
                     </div>
