--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="accio group pic.PNG">
+                        <img src="accio group pic.png">
                         <img src="accio pic 2.jpg">
                     </div>
                     <div class="about-col-2">
