--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="aboutUs">
             <div class="container">
                 <div class="row">
-                    <div class="about-col">
+                    <div class="about">
                         <h1 class="subtitle">About Us</h1>
                         <p>Let's start with why we exist. In 2018, the two 13-year-old classmates decided that it's a good idea to team up for an innovation competition. They thought it was a one-time thing, until they tasted the sweetness of victory. They established the first digital maker club in their school with other pioneers. Together, they achieved more than what they could've thought of oin the first place, whether it's some material things like awards and achievement or hard and soft skills that will benefit their whole life. Moreover, they inspire young girls in their school to pursue robotics and programming too. Now that they have parted ways, they decided to build a website that tells their story, hoping that they could light up more people's fire of interest in the field of science and tech.</p>
                         <div class="tabTitles">
